--- a/index.html
+++ b/index.html
@@ -8,13 +8,28 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>vai ser uma imagem aqui</h1>
-<ul>
-    <li>chuteiras 10</li>
+    <header class="cabecalho">
+          <img class="cabecalho-imagem" src="chuteiras 10" alt="logo da chuteiras 10">
+<ul class="cabecalho-lista" >
+    <li class="cabecalho-lista-item">chuteiras 10</li>
 </ul>
 </body>
     </header>
+<section class="site">
+    <div class="site-div-conteudo">
+        <h2 class="site-titulo">sobre o site</h2>
+        <p class="site-texto-um">Corra aproveitar que a BLACK da COPA está com ofertas IMPERDÍVEIS e os preços LÁ EMBAIXO,venha aproveitar que o estoque está </p>
+        <p class="site-texto-dois">Todas as chuteiras com 50%,as chuteiras mais requisitadas por todos os boleiros é só aqui na CHUTEIRAS 10!!</p>
+    </div>
+        <img class="site-imagem-dois" src="image.png" alt="chuteira branca air zoom">
+    <img class="site-imagem-tres" src="image.png" alt="chuteira gx rosa">
+    <img class="site-imagem-cinco" src="image.png" alt="chuteira puma">
+    <img class="site-imagem-quatro" src="image.png" alt="chuteira crystal">
+    <img class="site-imagem-seis" src="image.png" alt="anuncio da black da copa">
+    <img class="site-imagem-um" src="image.png" alt="logo da chuteiras 10">
+    
+    
 
+</section>
 </body>
 </html>
