--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
         <p class="site-texto-um">Corra aproveitar que a BLACK da COPA está com ofertas IMPERDÍVEIS e os preços LÁ EMBAIXO,venha aproveitar que o estoque está </p>
         <p class="site-texto-dois">Todas as chuteiras com 50%,as chuteiras mais requisitadas por todos os boleiros é só aqui na CHUTEIRAS 10!!</p>
     </div>
-        <img class="site-imagem-dois" src="image.png" alt="chuteira branca air zoom">
-    <img class="site-imagem-tres" src="image.png" alt="chuteira gx rosa">
-    <img class="site-imagem-cinco" src="image.png" alt="chuteira puma">
-    <img class="site-imagem-quatro" src="image.png" alt="chuteira crystal">
-    <img class="site-imagem-seis" src="image.png" alt="anuncio da black da copa">
-    <img class="site-imagem-um" src="image.png" alt="logo da chuteiras 10">
+    <img class="chuteira-um" src="./img/image 1.png" alt="logo chuteiras 10">
+    <img class="chuteira-dois" src="./img/image 2.png" alt="chuteira air zoom branca">
+    <img class="chuteira-tres" src="./img/image 3.png" alt="chuteira gx">
+    <img class="chuteira-quatro" src="./img/image 4.png" alt="chuteira crystal">
+    <img class="chuteira-cinco" src="./img/image 7 (4).png" alt="chuteira puma">
+    <img class="chuteira-seis" src="./img/image 6.png" alt="anuncio de promocao">
     
     
 
